frontend/test/should_fail/index_isin_fromto_argument_mismatch.grg
#using "index_count_model.gm"

rule i {
	n:N;
	
	if{ isInNodesFromIndexFromTo(n, fooi, "mismachting-string", 42.0); }
	
	modify {
	}
}
